--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asgiref==3.3.1
     # via django
 django==3.1.5
     # via -r requirements.in
+python-dotenv==0.15.0
+    # via -r requirements.in
 pytz==2020.5
     # via django
 sqlparse==0.4.1
