--- a/setup.cfg
+++ b/setup.cfg
@@ -12,3 +12,6 @@ line_length = 88
 [mypy]
 ignore_missing_imports = True
 strict = True
+
+[tool:pytest]
+addopts = --ds=app_name.settings --reuse-db
