--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,6 +8,8 @@ appdirs==1.4.4
     # via
     #   black
     #   virtualenv
+attrs==20.3.0
+    # via pytest
 black==20.8.b1
     # via -r requirements-dev.in
 cfgv==3.2.0
@@ -22,6 +24,8 @@ flake8==3.8.4
     # via -r requirements-dev.in
 identify==1.5.13
     # via pre-commit
+iniconfig==1.1.1
+    # via pytest
 isort==5.7.0
     # via -r requirements-dev.in
 mccabe==0.6.1
@@ -34,14 +38,28 @@ mypy==0.800
     # via -r requirements-dev.in
 nodeenv==1.5.0
     # via pre-commit
+packaging==20.9
+    # via pytest
 pathspec==0.8.1
     # via black
+pluggy==0.13.1
+    # via pytest
 pre-commit==2.10.0
     # via -r requirements-dev.in
+py==1.10.0
+    # via pytest
 pycodestyle==2.6.0
     # via flake8
 pyflakes==2.2.0
     # via flake8
+pyparsing==2.4.7
+    # via packaging
+pytest-django==4.1.0
+    # via -r requirements-dev.in
+pytest==6.2.2
+    # via
+    #   -r requirements-dev.in
+    #   pytest-django
 pyyaml==5.4.1
     # via pre-commit
 regex==2020.11.13
@@ -52,6 +70,7 @@ toml==0.10.2
     # via
     #   black
     #   pre-commit
+    #   pytest
 typed-ast==1.4.2
     # via
     #   black
