Move config where it belongs

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,4 +14,4 @@ ignore_missing_imports = True
 strict = True
 
 [tool:pytest]
-addopts = --ds=app_name.settings --reuse-db
+addopts = --ds=config.settings --reuse-db
