--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,7 @@ line_length = 88
 [mypy]
 ignore_missing_imports = True
 strict = True
+allow_subclassing_any = True
 
 [tool:pytest]
 addopts = --ds=config.settings --reuse-db
