--- a/setup.cfg
+++ b/setup.cfg
@@ -15,4 +15,4 @@ strict = True
 allow_subclassing_any = True
 
 [tool:pytest]
-addopts = --ds=config.settings --reuse-db
+addopts = --ds=config.settings --reuse-db --quiet
