--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   postgres:
     image: postgres
     environment:
-      POSTGRES_DB: project_name
+      POSTGRES_DB: {{ project_name }}
       POSTGRES_PASSWORD: pass
     ports:
       - 5432:5432
