--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DEBUG=true
 SECRET_KEY=not-secret-enough
-DATABASE_URL=postgresql://postgres:pass@localhost:5432/project_name
-CACHE_URL=db://project_name_cache
+DATABASE_URL=postgresql://postgres:pass@localhost:5432/{{ project_name }}
+CACHE_URL=db://{{ project_name }}_cache
 ENABLE_WHITENOISE=true
