--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-django==3.1.5
-dj-database-url==0.5.0
-django-cache-url==3.1.2
-psycopg2==2.8.6
-python-dotenv==0.15.0
-whitenoise[brotli]==5.2.0
-sentry-sdk==0.19.5
+# Heroku needs requirements.txt to be in the projects root
+-r requirements/core.txt
