--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,22 @@
 repos:
-  - repo: local
+  - repo: https://github.com/psf/black
+    rev: 20.8b1
     hooks:
       - id: black
-        name: black
-        entry: black
-        language: system
-        types: [python]
+  - repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.4
+    hooks:
       - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [python]
+  - repo: https://github.com/PyCQA/isort
+    rev: 5.7.0
+    hooks:
       - id: isort
-        name: isort
-        entry: isort
-        language: system
+  - repo: local
+    hooks:
+      - id: pyright
+        name: pyright
+        entry: pyright
+        language: node
         types: [python]
-      - id: mypy
-        name: mypy
-        entry: mypy
-        language: system
-        types: [python]
-        require_serial: true
+        pass_filenames: false
+        additional_dependencies: ["pyright@^1.1.109"]
