--- a/github/workflows/lint-and-test.yml
+++ b/github/workflows/lint-and-test.yml
@@ -47,8 +47,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
-      - name: Check code for formatting and typing errors
-        run: pre-commit run --all-files
+      - name: Check constraints are up to date
+        run: |
+          pip freeze > /tmp/constraints.txt
+          diff /tmp/constraints.txt requirements/constraints.txt
       - name: Test with pytest
         run: pytest
       - uses: pre-commit/action@v2.0.0
