--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -20,7 +20,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install django==3.1.5
       - name: Run install script
-        run: /bin/bash install.sh test_app
+        run: /bin/bash install.sh test_app .
       - name: Run bootstrap script
         run: |
           cd test_app
