--- a/.github/workflows/test-bootstrap.yml
+++ b/.github/workflows/test-bootstrap.yml
@@ -19,6 +19,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install django==3.1.5
+      - name: Setup git user
+        # Necessary for "git init" of bootstrap script
+        run: |
+          git config --global user.email "you@example.com"
+          git config --global user.name "Your Name"
       - name: Run install script
         run: |
           mkdir /tmp/test_app
