--- a/static/package.json
+++ b/static/package.json
@@ -14,6 +14,7 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "autoprefixer": "^10.2.4",
     "cssnano": "^5.0.2",
+    "glob": "^7.1.7",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.3.0",
     "gulp-postcss": "^9.0.0",
