Simpler frontend with Vite
- use Vite + django_vite
- remove hello_world
- unnest templates

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ DEBUG=true
 SECRET_KEY=not-secret-enough
 DATABASE_URL=postgresql://postgres:pass@localhost:5432/{{ project_name }}
 CACHE_URL=db://{{ project_name }}_cache
-ENABLE_WHITENOISE=true
+DJANGO_VITE_DEV_MODE=false
