Sane mypy defaults

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,7 @@ line_length = 88
 
 [tool:pytest]
 addopts = --ds=config.settings --reuse-db --quiet
+
+[mypy]
+ignore_missing_imports = True
+check_untyped_defs = True
