--- a/github/workflows/lint-and-test.yml
+++ b/github/workflows/lint-and-test.yml
@@ -7,7 +7,7 @@ on:
     branches: [master]
 
 jobs:
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
 
     services:
@@ -45,10 +45,52 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements/dev.txt
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16.5
+      - name: Cache node dependencies
+        uses: actions/cache@v2
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          {% verbatim %}key: npm-${{ hashFiles('package-lock.json') }}{% endverbatim %}
+          restore-keys: |
+            npm-
+      - name: Install node dependencies
+        run: |
+          npm install
+      - name: Build static assets
+        run: bin/build-assets
+      - name: Test with pytest
+        run: pytest
+
+  check-constraints-up-to-date:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+      - name: Cache python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          {% verbatim %}key: pip-${{ hashFiles('requirements/*.txt') }}{% endverbatim %}
+          restore-keys: |
+            pip-
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements/dev.txt
       - name: Check constraints are up to date
         run: |
           pip freeze > /tmp/constraints.txt
           diff /tmp/constraints.txt requirements/constraints.txt
-      - name: Test with pytest
-        run: pytest
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
       - uses: pre-commit/action@v2.0.0
